sqlite/src/bindings/sqlite3_bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_module {
    pub iVersion: core::ffi::c_int,
    pub xCreate: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3,
            pAux: *mut core::ffi::c_void,
            argc: core::ffi::c_int,
            argv: *const *const core::ffi::c_char,
            ppVTab: *mut *mut sqlite3_vtab,
            arg2: *mut *mut core::ffi::c_char,
        ) -> core::ffi::c_int,
    >,
    pub xConnect: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3,
            pAux: *mut core::ffi::c_void,
            argc: core::ffi::c_int,
            argv: *const *const core::ffi::c_char,
            ppVTab: *mut *mut sqlite3_vtab,
            arg2: *mut *mut core::ffi::c_char,
        ) -> core::ffi::c_int,
    >,
    pub xBestIndex: ::core::option::Option<
        unsafe extern "C" fn(
            pVTab: *mut sqlite3_vtab,
            arg1: *mut sqlite3_index_info,
        ) -> core::ffi::c_int,
    >,
    pub xDisconnect:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xDestroy:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xOpen: ::core::option::Option<
        unsafe extern "C" fn(
            pVTab: *mut sqlite3_vtab,
            ppCursor: *mut *mut sqlite3_vtab_cursor,
        ) -> core::ffi::c_int,
    >,
    pub xClose: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_vtab_cursor) -> core::ffi::c_int,
    >,
    pub xFilter: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_vtab_cursor,
            idxNum: core::ffi::c_int,
            idxStr: *const core::ffi::c_char,
            argc: core::ffi::c_int,
            argv: *mut *mut sqlite3_value,
        ) -> core::ffi::c_int,
    >,
    pub xNext: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_vtab_cursor) -> core::ffi::c_int,
    >,
    pub xEof: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_vtab_cursor) -> core::ffi::c_int,
    >,
    pub xColumn: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_vtab_cursor,
            arg2: *mut sqlite3_context,
            arg3: core::ffi::c_int,
        ) -> core::ffi::c_int,
    >,
    pub xRowid: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_vtab_cursor,
            pRowid: *mut sqlite3_int64,
        ) -> core::ffi::c_int,
    >,
    pub xUpdate: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_vtab,
            arg2: core::ffi::c_int,
            arg3: *mut *mut sqlite3_value,
            arg4: *mut sqlite3_int64,
        ) -> core::ffi::c_int,
    >,
    pub xBegin:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xSync:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xCommit:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xRollback:
        ::core::option::Option<unsafe extern "C" fn(pVTab: *mut sqlite3_vtab) -> core::ffi::c_int>,
    pub xFindFunction: ::core::option::Option<
        unsafe extern "C" fn(
            pVtab: *mut sqlite3_vtab,
            nArg: core::ffi::c_int,
            zName: *const core::ffi::c_char,
            pxFunc: *mut ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *mut sqlite3_context,
                    arg2: core::ffi::c_int,
                    arg3: *mut *mut sqlite3_value,
                ),
            >,
            ppArg: *mut *mut core::ffi::c_void,
        ) -> core::ffi::c_int,
    >,
    pub xRename: ::core::option::Option<
        unsafe extern "C" fn(
            pVtab: *mut sqlite3_vtab,
            zNew: *const core::ffi::c_char,
        ) -> core::ffi::c_int,
    >,
    pub xSavepoint: ::core::option::Option<
        unsafe extern "C" fn(pVTab: *mut sqlite3_vtab, arg1: core::ffi::c_int) -> core::ffi::c_int,
    >,
    pub xRelease: ::core::option::Option<
        unsafe extern "C" fn(pVTab: *mut sqlite3_vtab, arg1: core::ffi::c_int) -> core::ffi::c_int,
    >,
    pub xRollbackTo: ::core::option::Option<
        unsafe extern "C" fn(pVTab: *mut sqlite3_vtab, arg1: core::ffi::c_int) -> core::ffi::c_int,
    >,
    pub xShadowName: ::core::option::Option<
        unsafe extern "C" fn(arg1: *const core::ffi::c_char) -> core::ffi::c_int,
    >,
    pub xIntegrity: ::core::option::Option<
        unsafe extern "C" fn(
            pVTab: *mut sqlite3_vtab,
            zSchema: *const core::ffi::c_char,
            zTabName: *const core::ffi::c_char,
            mFlags: core::ffi::c_int,
            pzErr: *mut *mut core::ffi::c_char,
        ) -> core::ffi::c_int,
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_index_info {
    pub nConstraint: core::ffi::c_int,
    pub aConstraint: *mut sqlite3_index_info_sqlite3_index_constraint,
    pub nOrderBy: core::ffi::c_int,
    pub aOrderBy: *mut sqlite3_index_info_sqlite3_index_orderby,
    pub aConstraintUsage: *mut sqlite3_index_info_sqlite3_index_constraint_usage,
    pub idxNum: core::ffi::c_int,
    pub idxStr: *mut core::ffi::c_char,
    pub needToFreeIdxStr: core::ffi::c_int,
    pub orderByConsumed: core::ffi::c_int,
    pub estimatedCost: f64,
    pub estimatedRows: sqlite3_int64,
    pub idxFlags: core::ffi::c_int,
    pub colUsed: sqlite3_uint64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_index_info_sqlite3_index_constraint {
    pub iColumn: core::ffi::c_int,
    pub op: core::ffi::c_uchar,
    pub usable: core::ffi::c_uchar,
    pub iTermOffset: core::ffi::c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_index_info_sqlite3_index_orderby {
    pub iColumn: core::ffi::c_int,
    pub desc: core::ffi::c_uchar,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_index_info_sqlite3_index_constraint_usage {
    pub argvIndex: core::ffi::c_int,
    pub omit: core::ffi::c_uchar,
}
unsafe extern "C" {
    pub fn sqlite3_create_module(
        db: *mut sqlite3,
        zName: *const core::ffi::c_char,
        p: *const sqlite3_module,
        pClientData: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_module_v2(
        db: *mut sqlite3,
        zName: *const core::ffi::c_char,
        p: *const sqlite3_module,
        pClientData: *mut core::ffi::c_void,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_drop_modules(
        db: *mut sqlite3,
        azKeep: *mut *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_vtab {
    pub pModule: *const sqlite3_module,
    pub nRef: core::ffi::c_int,
    pub zErrMsg: *mut core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_vtab_cursor {
    pub pVtab: *mut sqlite3_vtab,
}
unsafe extern "C" {
    pub fn sqlite3_declare_vtab(
        arg1: *mut sqlite3,
        zSQL: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_overload_function(
        arg1: *mut sqlite3,
        zFuncName: *const core::ffi::c_char,
        nArg: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_blob {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn sqlite3_blob_open(
        arg1: *mut sqlite3,
        zDb: *const core::ffi::c_char,
        zTable: *const core::ffi::c_char,
        zColumn: *const core::ffi::c_char,
        iRow: sqlite3_int64,
        flags: core::ffi::c_int,
        ppBlob: *mut *mut sqlite3_blob,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_blob_reopen(arg1: *mut sqlite3_blob, arg2: sqlite3_int64) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_blob_close(arg1: *mut sqlite3_blob) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_blob_bytes(arg1: *mut sqlite3_blob) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_blob_read(
        arg1: *mut sqlite3_blob,
        Z: *mut core::ffi::c_void,
        N: core::ffi::c_int,
        iOffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_blob_write(
        arg1: *mut sqlite3_blob,
        z: *const core::ffi::c_void,
        n: core::ffi::c_int,
        iOffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vfs_find(zVfsName: *const core::ffi::c_char) -> *mut sqlite3_vfs;
}
unsafe extern "C" {
    pub fn sqlite3_vfs_register(
        arg1: *mut sqlite3_vfs,
        makeDflt: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vfs_unregister(arg1: *mut sqlite3_vfs) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_mutex_alloc(arg1: core::ffi::c_int) -> *mut sqlite3_mutex;
}
unsafe extern "C" {
    pub fn sqlite3_mutex_free(arg1: *mut sqlite3_mutex);
}
unsafe extern "C" {
    pub fn sqlite3_mutex_enter(arg1: *mut sqlite3_mutex);
}
unsafe extern "C" {
    pub fn sqlite3_mutex_try(arg1: *mut sqlite3_mutex) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_mutex_leave(arg1: *mut sqlite3_mutex);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_mutex_methods {
    pub xMutexInit: ::core::option::Option<unsafe extern "C" fn() -> core::ffi::c_int>,
    pub xMutexEnd: ::core::option::Option<unsafe extern "C" fn() -> core::ffi::c_int>,
    pub xMutexAlloc:
        ::core::option::Option<unsafe extern "C" fn(arg1: core::ffi::c_int) -> *mut sqlite3_mutex>,
    pub xMutexFree: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex)>,
    pub xMutexEnter: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex)>,
    pub xMutexTry:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex) -> core::ffi::c_int>,
    pub xMutexLeave: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex)>,
    pub xMutexHeld:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex) -> core::ffi::c_int>,
    pub xMutexNotheld:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_mutex) -> core::ffi::c_int>,
}
unsafe extern "C" {
    pub fn sqlite3_mutex_held(arg1: *mut sqlite3_mutex) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_mutex_notheld(arg1: *mut sqlite3_mutex) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_db_mutex(arg1: *mut sqlite3) -> *mut sqlite3_mutex;
}
unsafe extern "C" {
    pub fn sqlite3_file_control(
        arg1: *mut sqlite3,
        zDbName: *const core::ffi::c_char,
        op: core::ffi::c_int,
        arg2: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_test_control(op: core::ffi::c_int, ...) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_keyword_count() -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_keyword_name(
        arg1: core::ffi::c_int,
        arg2: *mut *const core::ffi::c_char,
        arg3: *mut core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_keyword_check(
        arg1: *const core::ffi::c_char,
        arg2: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_str {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn sqlite3_str_new(arg1: *mut sqlite3) -> *mut sqlite3_str;
}
unsafe extern "C" {
    pub fn sqlite3_str_finish(arg1: *mut sqlite3_str) -> *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_str_appendf(arg1: *mut sqlite3_str, zFormat: *const core::ffi::c_char, ...);
}
